# Quakaster

./: .gitignore  CMakeLists.txt  README.md  example.txt  glew_surrogate.h  glmplus.h  log.txt  structure.txt  todo.txt
custom/: InputDelegateOld.h  autoexec.cfg
html/: _quakaster_8h_source.html  doxygen_crawl.html  files.html  jquery.js
include/: CameraComponent.h  Console.h  FrameBuffer.h  GameContext.h  IWidget.h  IWidgetComponent.h  ImGuiButton.h  ImGuiLabel.h  KeyBindBase.h  MeshComponent.h  ShaderComponent.h  TextureComponent.h  UICore.h  UIWidget.h  application.h  common.h  consoleComponent.h  controller.h  demo_context.h  entity.h  gameApp.h  ostream_operators.h  position.h  res_mesh.h  res_shader.h  scene.h  textComponent.h  think.h  utility_types.h  window.h
include/GameContext/: GameContext.h  Scene.h  demo_context.h
include/GameContext/ECS/: Entity.h
include/GameContext/IO/: InputBase.h  InputDelegate.h  InputEvents.h  controller.h  controllerEvents.h
include/GameContext/UI/: ConsoleUI.h  Spedometer.h  SpedometerUI.h  UIBase.h  UIContext.h  console_message.h
include/GameContext/base/: Component.h  Entity.h  Quakaster.h  Scene.h  Serializing.h  System.h  Tag.h  eventHandler.h  physicsComponent.h
include/GameContext/client/: Client.h  application.h
include/GameContext/components/: AABB.h  Framebuffer.h  IMovementModule.h  Scalar.h  camera.h  controller.h  ent_controller.h  ent_controller_new.h  physics_components.h  transform.h
include/GameContext/entities/: ent_cube.h  ent_player.h  player.h
include/GameContext/entity_components/: basic_components.h
include/GameContext/graphics/: EBO.h  VAO.h  VBO.h  gl_utils.h
include/GameContext/resources/: mesh.h  meshComponent.h  res_mesh.h  res_shader.h  res_texture.h
include/GameContext/server/: ConsoleInterpreter.h  server.h
include/GameContext/server/interpreter/: ConsoleInterpreter.h  InterpreterToken.h  console_function.h  convar.h
include/GameContext/utils/: utility_types.h  vector_visualizer.h
include/GameContext/window/: Renderer.h  window.h
include/IO/: InputDelegate.h  InputEvents.h
include/UI/: ConsoleUI.h  Spedometer.h  UIBase.h  UIContext.h  console_color.h  console_message.h
include/base/: Component.h  Entity.h  Event.h  Quakaster.h  Scene.h  System.h  SystemManager.h  Tag.h  base.h  logging.h
include/bsp/: bsp.h  bsp_index.h  bsp_node.h  bsp_plane.h  bsp_tree.h  triangle.h
include/client/: Client.h  application.h
include/components/: AABB.h  Controller.h  Freecam.h  MeshInstance.h  MoveState.h  QMovement.h  Scalar.h  camera.h  physicsComponent.h  physics_components.h  test_controller.h  transform.cpp  transform.h
include/entities/: ent_cube.h  ent_player.h
include/graphics/: EBO.h  Framebuffer.h  VAO.h  VBO.h  gl_utils.h
include/resources/: mesh.h  mesh_manager.h  res_shader.h  res_texture.h
include/server/: server.h
include/server/interpreter/: ConsoleInterpreter.h  ConsoleParser.h  InterpreterToken.h  console_function.h  convar.h
include/utils/: Inspector.h  raycast_line.h  utility_types.h  vector_visualizer.h
include/window/: Renderer.h  window.h
latex/: _quakaster_8h_source.tex  files.tex  refman.tex
old/: Console.h  Inspectible.h  Scene.h  client.h  eBuffer.h  ent.h  ent_brush.h  ent_camera.h  ent_container.h  ent_controller.h  glm_master.h  glm_string.h  globals.h  level_editor.h  level_editor_controller.h  movable_ent.h  new_ent_container.h  res_shader.h  server.h  test.h  windowContent.h
old2/: Console.h  application.h  client.h  consoleInterpreter.h  controller.h  entity.h  gameApp.h  gamecontext.h  res_mesh.h  res_shader.h  scene.h  server.h  think.h
old_bsp/: bsp.h
resources/levels/: simpletestlvl.mtl
resources/shaders/: AABB.frag  AABB.vert  brush_vertex.glsl  default.frag  default.vert  vector_visualizer.frag  vector_visualizer.vert
src/: FrameBuffer.cpp  console.cpp  main.cpp  window.cpp
